# huggingface-training

./: .gitignore  .pre-commit-config.yaml  README.md  accelerate_config_fsdp.yaml  accelerate_config_fsdp_lora.yaml  accelerate_config_fsdp_qlora.yaml  deepspeed_config.json  environment.yml  pyproject.toml
scripts/: evaluate_model.py
scripts/basic/: custom_loop.py  custom_loop_accelerate.py
scripts/lora/: custom_loop.py  custom_loop_accelerate.py
scripts/sdpa/: flash_attention.py  math_kernel.py
scripts/trainer/: advanced_usage.py  getting_started.py
scripts/trainer/sharded/: fsdp.py  fsdp_lora.py  fsdp_qlora.py  zero.py
train/: custom_loop.py  custom_loop_accelerate.py  custom_loop_dataset.py  getting_started.py  prepare_datasets.py
train/basic/: getting_started.py
train/lora/: custom_loop.py  custom_loop_accelerate.py
